2008-02-28  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp: fixed seeking, restarting and a memory leak


2008-02-27  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp: implemented IMediaSeeking


2008-02-24  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp, win32/dshow/asap_dsf.def, win32/dshow/README,
  win32/gui.rc, win32/Makefile, README: created DirectShow source filter
  (usable in Windows Media Player)


2008-02-19  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed conversion of TMC (playing twice per frame) to SAP


** 1.1.0 released on 2008-02-17

2008-02-17  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: can edit file information before converting to SAP


2008-02-16  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, java/ASAP.ppjava, java/ASAP_ModuleInfo.java, win32/gui.c,
  win32/gui.h, win32/gui.rc, win32/Makefile: conversion to and from SAP

* asap2wav.c: use ASAP_ChangeExt()


2008-02-10  Piotr Fusik  <fox@scene.pl>
* xmms/libasap.c: corrected two bugs reported by Hennie:
  1. xmms did not advance to the next track after a SAP file has been played;
  2. when one seeks to another part of the track during the last +-3 seconds
     of play (after the playing thread has quit), xmms hangs completely


2008-01-26  Piotr Fusik  <fox@scene.pl>
* java/ASAP.ppjava: corrected applet volume bars (use AUDC not AUDF)


2008-01-22  Piotr Fusik  <fox@scene.pl>
* java/ASAP2WAV.java: made "-b" option work


2008-01-08  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c, asap.h, java/ASAP.ppjava: two-tone POKEY mode emulation


2007-12-31  Piotr Fusik  <fox@scene.pl>
* win32/foobar2000/foo_asap.cpp: conversion no longer interferes
  with the playback


2007-12-15  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of RMT music


2007-12-09  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of TM2 music

* win32/winamp/in_asap.c: group similar file types


2007-12-08  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of TMC music

